--- a/src/docs/asciidoc/index.adoc
+++ b/src/docs/asciidoc/index.adoc
@@ -13,3 +13,7 @@ Use at your own risk.
 == Contents
 
 link:gradle.html[Gradle]
+
+link:javascript.html[JavaScript]
+
+link:prototype-js.html[prototype.js]
