--- a/src/docs/asciidoc/index.adoc
+++ b/src/docs/asciidoc/index.adoc
@@ -14,6 +14,8 @@ Use at your own risk.
 
 link:angular.html[Angular]
 
+link:docker.html[Docker]
+
 link:gradle.html[Gradle]
 
 link:groovy.html[Groovy]
