--- a/src/docs/asciidoc/index.adoc
+++ b/src/docs/asciidoc/index.adoc
@@ -24,4 +24,6 @@ link:java8-lambdas.html[Java 8 lambdas]
 
 link:javascript.html[JavaScript]
 
+link:kubernetes.html[Kubernetes]
+
 link:prototype-js.html[prototype.js]
