--- a/src/docs/asciidoc/javascript.adoc
+++ b/src/docs/asciidoc/javascript.adoc
@@ -585,3 +585,396 @@ RTextCell.prototype = Object.create(TextCell.prototype);
 
 . have to define variables
 . `this` in functions is `undefined`
+
+== JavaScript re-introduction
+
+https://developer.mozilla.org/en-US/docs/Web/JavaScript/A_re-introduction_to_JavaScript
+
+
+Prototypical inheritance - https://developer.mozilla.org/en-US/docs/Web/JavaScript/Inheritance_and_the_prototype_chain
+
+=== Data types:
+
+* Number
+* String
+* Boolean
+* Symbol
+* Object
+  ** Function
+  ** Array
+  ** Date
+  ** RegExp
+* undefined
+* null
+
+==== Numbers
+
+Double-precission 64-bit format IEEE 754 values.
+
+In practice integer values are treated as 32-bit ints.
+
+[source,javascript]
+Math.sin(3.5)
+var circumference = 2 * Math.PI * r;
+
+Parsing strings to ints
+
+[source,javascript]
+parseInt('123', 10); // 123
+parseInt('010', 10); // 10
+
+[source,javascript]
+parseInt('hello', 10); // NaN
+
+`NaN` is toxic - if it's an operand to any operation, then the result is also `NaN`.
+
+[source,javascript]
+NaN + 5; // NaN
+
+[source,javascript]
+isNaN(NaN); // true
+
+[source,javascript]
+1 / 0; // Infinity
+-1 / 0; // -Infinity
+
+[source,javascript]
+inFinite(Infinity); // false
+isFinite(-Infinity); // false
+isFinite(NaN); // false
+
++ operator to convert to int.
+
+==== Strings
+
+Sequences of Unicode characters.
+
+[source,javascript]
+'hello'.length; // 5
+
+[source,javascript]
+'hello'.charAt(0); // 'h'
+'hello, world'.replace('hello', 'goodbye'); // 'goodbye, world'
+'hello'.toUpperCase(); // 'HELLO'
+
+==== Other types
+
+`null` indicates deliberate non-value.
+
+`undefined` - for uninitialized variables.
+
+Boolean - true, false keywords
+
+.Conversion rules:
+* false - `false`, `0`, empty string, `NaN`, `null`, `undefined`
+* true - all other values
+
+[source,javascript]
+Boolean(''); // false
+Boolean(234); // true
+
+Boolean operators: `&&`, `||`, `!`.
+
+=== Variables
+
+Variables declared with keywords: `let`, `const`, `var`.
+
+`let` - block-level variables
+
+`const` - block-level immutables
+
+`var` - function-level variables
+
+=== Operators
+
+Operators: `+`, `-`, `*`, `/`, `%`.
+
+`=` operator:
+
+[source,javascript]
+123 == '123'; //true
+1 == true; // true
+
+[source,javascript]
+123 === '123'; // false
+1 === true; // false
+
+=== Control structures
+
+[source,javascript]
+var name = 'kittens';
+if (name == 'puppies') {
+    name += ' woof';
+} else if (name == 'kittens') {
+    name += 'meow';
+} else {
+    name += '!';
+}
+
+[source,javascript]
+while (true) {
+    ...
+}
+
+[source,javascript]
+do {
+    ...
+} while (true);
+
+[source,javascript]
+for (let i = 0; i < 5; i++) {
+    ...
+}
+
+[source,javascript]
+for (let value of array) {
+    ...
+}
+
+[source,javascript]
+for (let property in object) {
+    ...
+}
+
+===== Short cirtuit
+
+[source,javascript]
+var name = o && o.getName();
+
+[source,javascript]
+var name = cachedName || (cachedName = getName());
+
+.Ternary operator
+[source,javascript]
+var allowed = (age > 10) ? 'yes' : 'no';
+
+.Switch statement
+[source,javascript]
+switch (action) {
+  case 'draw':
+    drawIt();
+    break;
+  default:
+    doNothing();
+}
+
+=== Objects
+
+Creating an object:
+
+[source,javascript]
+var obj = new Object();
+var obj = {};
+
+[source,javascript]
+var obj = {
+    name: 'Carrot',
+    for: 'Max
+
+[source,javascript]
+obj.details.color;
+obj['details']['size];
+
+Prototypes:
+
+[source,javascript]
+----
+function Person(name, age) {
+  this.name = name;
+  this.age = age;
+}
+
+var you = new Person('You', 24);
+----
+
+=== Arrays
+
+[source,javascript]
+var a = new Array();
+a[0] = 'dog';
+a[1] = 'cat';
+a[2] = 'hen';
+a.length; //3
+
+[source,javascript]
+var a = ['dog', 'cat', 'hen'];
+
+[source,javascript]
+for (var i = 0; i < a.length; i++) {
+    // do something with a[i]
+}
+
+[source,javascript]
+for (const currentValue of a) {
+   // do something with currentValue
+}
+
+[source,javascript]
+['dog', 'cat', 'hen'].forEach(currentValue, index, array) {
+  // do something with currentValue or array[index]
+}
+
+Append element:
+
+[source,javascript]
+a.push(item);
+
+Array methods:
+
+* toString()
+* toLocaleString()
+* concat(item...) - new array with items added
+* join(sep) - to string with separator
+* pop() - removes and returns last element.
+* push(item...) - appends elements
+* reverse()
+* shift() - removes and returns first element
+* slice(start [, end]) - returns subarray
+* sort([cmpfn]) - takes an optional comparison function
+* splice(start, delcount[, item...]) - lets delete a section and replace it with more items.
+* unshift(item...) - prepends to the start of the array
+
+=== Functions
+
+[source,javascript]
+function add(x, y) {
+    return x + y;
+}
+
+In no `return` statement - function returns `undefined`.
+
+When parameters not specified - they have `undefined` value.
+
+`arguments` variable:
+
+[source,javascript]
+function add() {
+    var sum = 0;
+    for (let i of arguments) {
+        sum += i;
+    }
+    return sum;
+}
+
+Rest parameter syntax:
+
+[source,javascript]
+function avg(...args) {
+    let sum = 0;
+    for (let value of args) {
+        sum += value;
+    }
+    return sum / args.length;
+}
+
+[source,javascript]
+avg(2, 3, 4, 5);
+
+`apply` method:
+
+[source,javascript]
+avg.apply(null, [2, 3, 4, 5]);
+
+Spread operator:
+
+[source,javascript]
+let numbers = [2, 3, 4, 5];
+avg(...numbers);
+
+Anonymous functions:
+
+[source,javascript]
+var avg = function() {
+    ...
+}
+
+[source,javascript]
+----
+var a = 1;
+var b = 2;
+
+(function() {
+  var b = 3;
+  a += b;
+})();
+
+a; // 4
+b; // 2
+----
+
+Recursion:
+[source,javascript]
+----
+function countChars(elm) {
+  if (elm.nodeType == 3) { // TEXT_NODE
+    return elm.nodeValue.length;
+  }
+  var count = 0;
+  for (var i = 0, child; child = elm.childNodes[i]; i++) {
+    count += countChars(child);
+  }
+  return count;
+}
+----
+
+IIFEs (Immediately Invoked Function Expressions):
+
+[source,javascript]
+var charsInBody = (function counter(elm) {
+  if (elm.nodeType == 3) { // TEXT_NODE
+    return elm.nodeValue.length;
+  }
+  var count = 0;
+  for (var i = 0, child; child = elm.childNodes[i]; i++) {
+    count += counter(child);
+  }
+  return count;
+})(document.body);
+
+=== Custom objects
+
+Javascript uses functions as classes.
+
+[source,javascript]
+function makePerson(first, last) {
+    return {
+        first: first,
+        last: last,
+        fullName: function() {
+            return this.first + ' ' + this.last;
+        },
+        fullNameReversed: function() {
+            return this.last + ' ' + this.first;
+        }
+    };
+}
+
+Prototypes:
+
+[source,javascript]
+----
+function Person(first, last) {
+    this.first = first;
+    this.last = last;
+}
+
+Person.prototype.fullName = function () {
+    return this.first + ' ' + this.last;
+};
+
+Person.prototype.fullNameReversed = function () {
+    return this.last + ' ' + this.first;
+};
+----
+
+==== apply and call
+
+apply(obj, argsArray)
+
+* obj is object to use as `this`
+* argsArray is an array
+
+call(obj, ...args)
+
+* obj is object to use as `this`
+* args are list of arguments
